--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="/styles/styles.css">
     </head>
     <body>
-        <div id="app"></div>
+        <div id="related"></div>
         <script type="text/javascript" src="bundle.js"></script>
     </body>
 </html>
